[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Hexagon.gd" type="Script" id=1]
[ext_resource path="res://Assets/Hexagon2.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 188.913, 25.5313 )

[sub_resource type="CircleShape2D" id=2]
radius = 333.674

[node name="Hexagon" type="Node2D"]
position = Vector2( 375, 667 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 1 )

[node name="HexaSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Red" type="Area2D" parent="."]
position = Vector2( 0, -319.897 )
collision_layer = 1025
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Red"]
visible = false
position = Vector2( 0, 1.42859 )
shape = SubResource( 1 )

[node name="Brown" type="Area2D" parent="."]
position = Vector2( -2.7142, 311.175 )
collision_layer = 1026
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Brown"]
visible = false
position = Vector2( 0, 1.42859 )
shape = SubResource( 1 )

[node name="Pink" type="Area2D" parent="."]
position = Vector2( -272.786, 156.46 )
rotation = 1.0472
collision_layer = 1028
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pink"]
visible = false
position = Vector2( 0, 1.42859 )
shape = SubResource( 1 )

[node name="Blue" type="Area2D" parent="."]
position = Vector2( 274.143, -157.04 )
rotation = 1.0472
collision_layer = 1032
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blue"]
visible = false
position = Vector2( 0, 1.42859 )
shape = SubResource( 1 )

[node name="Green" type="Area2D" parent="."]
position = Vector2( 274.143, 153.746 )
rotation = -1.0472
collision_layer = 1040
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Green"]
visible = false
position = Vector2( 0, 1.42859 )
shape = SubResource( 1 )

[node name="Yellow" type="Area2D" parent="."]
position = Vector2( -276.857, -157.04 )
rotation = -1.0472
collision_layer = 1056
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Yellow"]
visible = false
position = Vector2( 0, 1.42859 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="CenterArea" type="Area2D" parent="."]
collision_layer = 127
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterArea"]
position = Vector2( 0, -2.85712 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Red" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Brown" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Pink" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Blue" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Green" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Yellow" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="CenterArea" to="." method="_on_CenterArea_body_entered"]
